Fix z-index on active video in profile

--- a/app/assets/stylesheets/team-member.scss
+++ b/app/assets/stylesheets/team-member.scss
@@ -180,7 +180,7 @@
       position: absolute;
       top: 0;
       left: 0;
-      z-index: 9999999999;
+      z-index: 9999;
     }
 
     &:after {
